src/test/deca/context/invalid/our_tests/jb-modulo2.deca
// Description:
//    Invalid modulo operand
//
// Resultats:
//    Should throw Contextual error (rule 3.51)
//
// Historique:
//    cree le 22/01/2017

{
    1 % 1.0;
    1 % null;
    1 % new Object();
}
